add_subdirectory(ATOS_2Tasks)
add_subdirectory(ATOS_SerialTask)
add_subdirectory(ATOS_Reset)
add_subdirectory(ATOS_ResetAfterTimeout)

add_subdirectory(Button_LongPressed)

add_subdirectory(LED_RGB)
add_subdirectory(LED_Single)

add_subdirectory(LinkedList_ClassList)
add_subdirectory(LinkedList_SimpleIntegerList)

add_subdirectory(Watchdog_Reboot)

